Bundled commit: SPD algorithm now running in C++; some cleanups and code reconstruction 2

--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,13 @@
 *.Rproj.user
 *.gif
 *.RData
-.RData
 
+.RData
 .Rhistory
 .Rapp.history
-
-
-
-
 .Ruserdata
 
 
 plots/
 temp_results/
+*results/
